@@ -1,7 +1,6 @@
 package judgments;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -12,30 +11,20 @@ public class FileOpener {
     /*
     Zwraca ścieszki plików w folderze JSON
      */
-    private ArrayList<Path> getJsonList(String JsonDirectory) throws IOException{
-        Path dir = Paths.get(JsonDirectory);
+    private ArrayList<Path> getJsonPathList(String jsonDirectory) throws IOException{
+        Path dir = Paths.get(jsonDirectory);
         return Files.list(dir).collect(Collectors.toCollection(ArrayList::new));
     }
-
     /*
     Zwraca zawartość plików JSON w postaci listy stringów
      */
     public ArrayList<String> getFiles(String DirPath) throws IOException {
         ArrayList<String> fileContent = new ArrayList<>();
-        ArrayList<Path> paths = getJsonList(DirPath);
+        ArrayList<Path> paths = getJsonPathList(DirPath);
         for (Path path : paths){
-            String file = new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
-            file = removeMetaData(file);
+            String file = Files.readString(path);
             fileContent.add(file);
         }
         return fileContent;
-    }
-    /*
-    Usuwa meta dane z pliku JSON
-     */
-    private String removeMetaData(String file){
-        int beg = file.indexOf("items") + 7;
-        int end = file.indexOf("queryTemplate") - 2;
-        return file.substring(beg,end);
     }
 }
